# urbis-test

./: .env  .gitignore  docker-compose.yml
app/: Dockerfile  pyproject.toml  start.sh
app/app/: main.py  settings.py
app/app/apps/user/: __init__.py  inputs.py  models.py  mutations.py  otypes.py  queries.py  serializers.py
app/app/config/: db.py
app/tests/: conftest.py  test_models.py
